# tim011-tools

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  cpm.out  dummy.sh  hello_bin.sh  prexam.c  run_hello.sh  timfont.py  timfont8.py  timgraph.lib  timprint.lib  zxchars.h
.github/workflows/: test.yml
CPMEmulator/: BUILD.bazel  Makefile  bios.c  cpm.c  cpm.h  main.c  vt.c
docs/: maintenance.md
lib/sprites/: BUILD.bazel  sprites.S  sprites.h  sprites_sdcc.h
lib/testing/: BUILD.bazel  minunit.h  minunit_main.c
lib/tim/: BUILD.bazel  timgraph.S  timgraph.c  timgraph.h  timgraph.lib  timprint.S  timprint.h  timprint.lib
lib/zxchars/: BUILD.bazel  zx_spectrum_font.S
prexam/: BUILD.bazel  prexam.c  print_example.c
scripts/: default.com  diskdefs  timdisk.sh  timfont.py  timtile.py
tests/fopen/: BUILD.bazel  main.c
tests/hello/: BUILD.bazel  README.md  dot.s  hello.c
tests/hello/putchar/: BUILD.bazel  getchar.c  putchar.c  putchar.h
tests/hello_bin/: BUILD.bazel  README.md  hello.c  putchar.c  putchar.h
tests/hello_world/: BUILD.bazel  README.md  hello_world.c
tests/minunit/: BUILD.bazel  README.md  test.c
tests/printf/: BUILD.bazel  main.c
tests/redirect/: BUILD.bazel  hello_world.c
timexam/: BUILD.bazel  tim_example.c  timexam.c
