cc_binary(
    name = "cpm",
    visibility = ["//visibility:public"],
    srcs = [
      "bdos.c",
      "bios.c",
      "defs.h",
      "disassem.c",
      "main.c",
      "vt.c",
      "vt.h",
      "z80.c",
      "cpmdisc.h",
      "cpm.c",
      "cpm.h",
    ],
    linkopts = [
      "-lX11",
      "-lpthread",
      "-lm",
    ],
    copts = [
      "-g",
      "-pipe",
      "-Wall",
      "-Wextra",
      "-pedantic",
      "-ansi",
      "-D_POSIX_C_SOURCE=200809L",
      "-DPOSIX_TTY",
      "-DENDIAN_LITTLE",
      "-DMEM_BREAK",
    ],
)
