cc_binary(
    name = "cpm",
    srcs = [
        "bdos.c",
        "bios.c",
        "cpm.c",
        "cpm.h",
        "cpmdisc.h",
        "defs.h",
        "disassem.c",
        "main.c",
        "vt.c",
        "vt.h",
        "z80.c",
    ],
    copts = [
        "-g",
        "-pipe",
        "-Wall",
        "-Wextra",
        "-pedantic",
        "-ansi",
        "-D_POSIX_C_SOURCE=200809L",
        "-DPOSIX_TTY",
        "-DENDIAN_LITTLE",
        "-DMEM_BREAK",
    ],
    linkopts = [
        "-lX11",
        "-lpthread",
        "-lm",
    ],
    visibility = ["//visibility:public"],
)
