load("//build:rules.bzl", "mescc_binary")
load("//build:sdcc.bzl", "sdcc_z180_c_binary", "sdcc_z180_asm_library", "sdcc_z180_cpm_emu_run")

mescc_binary(
    name = "prexam",
    srcs = [
        "prexam.c",
    ],
    deps = [
        "//lib/tim:timprint",
        "//lib/zxchars",
    ],
)

sdcc_z180_cpm_emu_run(
    name = "emu",
    binary=":prexam",
)

sdcc_z180_c_binary(
    name = "prexam2",
    srcs = [ "print_example.c" ],
    deps = [
        "//lib/tim:tim_print_lib",
        "//lib/zxchars:zx_spectrum_font",
    ],
)

sdcc_z180_cpm_emu_run(
    name = "emu2",
    binary = ":prexam2",
)

