load("//build:rules.bzl", "mescc_binary")
load("//build:sdcc.bzl", "sdcc_z180_asm_library", "sdcc_z180_c_binary", "sdcc_z180_cpm_emu_run")

# Something is wrong with this - compilation will hang indefinitely.
#mescc_binary(
#name = "timexam",
#srcs = [
#"timexam.c",
#"//lib/sprites:sprites.h",
#],
#deps = [
#"//lib/tim:timprint",
#"//lib/zxchars",
#],
#)

#sdcc_z180_cpm_emu_run(
#name = "emu",
#binary = ":timexam",
#)

sdcc_z180_c_binary(
    name = "timexam2",
    srcs = ["tim_example.c"],
    deps = [
        "//lib/sprites",
        "//lib/sprites:sprites_sdcc_lib",
        "//lib/tim:tim_graph_asm",
        "//lib/tim:tim_graph_lib",
        "//lib/zxchars:zx_spectrum_font",
    ],
)

sdcc_z180_cpm_emu_run(
    name = "emu2",
    binary = ":timexam2",
)
