load("//build:sdcc.bzl", "sdcc_z180_c_binary", "sdcc_z180_asm_library", "sdcc_z180_cpm_emu_run")

package(default_visibility=["//visibility:public"])

filegroup(
    name = "zxchars",
    srcs = [
        "zxchars.h",
        "zxchars.png",
    ],
)



sdcc_z180_asm_library(
    name = "zx_spectrum_font",
    srcs = [ "zx_spectrum_font.S", ],
)
