load("//build:sdcc.bzl",
    "sdcc_z180_c_binary", 
    "sdcc_z180_cpm_emu_run",
    "sdcc_z180_cpm_test",
)
load("//build:sdcc.bzl", "sdcc_z180_asm_library", "sdcc_z180_c_binary", "sdcc_z180_cpm_emu_run")

sdcc_z180_c_binary(
    name = "hello",
    srcs = ["hello.c"],
    deps = [
        "//tests/hello/putchar",
        # This binary links assembly code!
        ":dot",
    ],
)

sdcc_z180_asm_library(
    name = "dot",
    srcs = ["dot.s"],
)

# Run this target using:
#
#   bazel run //tests/hello:emu
sdcc_z180_cpm_emu_run(
    name = "emu",
    binary = ":hello",
)

sdcc_z180_cpm_test(
    name="test",
    binary=":hello",
)
