load(
    "//build:sdcc.bzl",
    "sdcc_z180_c_binary",
    "sdcc_z180_cpm_emu_run",
    "sdcc_z180_cpm_test",
)
load("//build:sdcc.bzl", "sdcc_z180_c_binary", "sdcc_z180_c_library")

sdcc_z180_c_binary(
    name = "hello",
    srcs = ["hello.c"],
    deps = [
        ":lib",
        "//lib/testing:minunit",
    ],
)

sdcc_z180_c_library(
    name = "lib",
    srcs = ["putchar.c"],
    hdrs = ["putchar.h"],
)

sdcc_z180_cpm_test(
    name = "test",
    binary = ":hello",
)
