load(
    "//build:sdcc.bzl",
    "sdcc_z180_c_binary",
    "sdcc_z180_cpm_emu_run",
    "sdcc_z180_cpm_test",
)
load("//build/tim011-image:rules.bzl", "tim011_disk_image")
load("//build:macros.bzl", "tim011_emu_run")

sdcc_z180_c_binary(
    name = "bin",
    srcs = ["test.c"],
    deps = [
        "//lib/testing:minunit",
    ],
)

sdcc_z180_cpm_test(
    name = "test",
    binary = ":bin",
)
