load("//build:sdcc.bzl", "sdcc_z180_c_binary", "sdcc_z180_cpm_emu_run")
load("//build/tim011-image:rules.bzl", "tim011_disk_image")
load("//build:macros.bzl", "tim011_emu_run")  # Probably needs reshuffling.

sdcc_z180_c_binary(
    name = "hw",
    srcs = ["hello_world.c"],
)

tim011_disk_image(
    name = "img",
    base_image = "@mame_docker//:TIM011-Kit.img",
    binaries = [ ":hw" ],
)

tim011_emu_run(
    name="emu", 
    image=":img", 
    program="hw", 
)

sdcc_z180_cpm_emu_run(
    name="emu2",
    binary=":hw",
)
